# routes/trRoutes.js
@@ -2,5 +2,5 @@ const TupsController = require("../controllers/TupsController");
 
 module.exports = (app) => {
   app.route("/tups").get(TupsController.getAll).post(TupsController.create);
-  app.route("/tups/:TupsId").get(TupsController.getByID);
+  app.route("/tups/:TupsID").get(TupsController.getByID);
 };
